[gd_scene load_steps=9 format=2]

[ext_resource path="res://ux/Main menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/bruteFonts/EightBitDragon-anqx.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ux/botao_transparente.tres" type="StyleBox" id=3]
[ext_resource path="res://png-transparent-medieval-european-border-background-gradient-color-european-style-complicated.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 57
outline_color = Color( 0.168627, 0.109804, 0.0392157, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 24
outline_color = Color( 0.411765, 0.243137, 0.0705882, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.85098, 0.54902, 0.231373, 0 )
border_color = Color( 0, 0, 0, 1 )
corner_detail = 6

[sub_resource type="DynamicFont" id=2]
size = 24
outline_color = Color( 0.360784, 0.243137, 0.0980392, 1 )
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1023.0
margin_bottom = 598.0
color = Color( 0.34902, 0.231373, 0.105882, 1 )

[node name="Png-transparent-medieval-european-border-background-gradient-color-european-style-complicated" type="Sprite" parent="ColorRect"]
position = Vector2( 511.5, 299 )
scale = Vector2( 1.11196, 1.15444 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -205.5
margin_top = 79.0
margin_right = 205.5
margin_bottom = 80.0
custom_colors/font_color = Color( 0.321569, 0.172549, 0.0235294, 1 )
custom_fonts/font = SubResource( 1 )
text = "Style Knight"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.25
margin_top = -127.0
margin_right = 156.25
margin_bottom = 127.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 312.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 30, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 11.46
custom_colors/font_color_disabled = Color( 0.592157, 0.352941, 0.109804, 1 )
custom_colors/font_color_focus = Color( 0.592157, 0.352941, 0.109804, 1 )
custom_colors/font_color = Color( 0.411765, 0.243137, 0.0705882, 1 )
custom_colors/font_color_hover = Color( 0.592157, 0.352941, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.592157, 0.352941, 0.109804, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "Iniciar"

[node name="LevelsButton" type="Button" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 312.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 30, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 11.46
custom_colors/font_color_disabled = Color( 0.592157, 0.352941, 0.109804, 1 )
custom_colors/font_color_focus = Color( 0.592157, 0.352941, 0.109804, 1 )
custom_colors/font_color = Color( 0.411765, 0.243137, 0.0705882, 1 )
custom_colors/font_color_hover = Color( 0.592157, 0.352941, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.592157, 0.352941, 0.109804, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "Niveis"

[node name="CreditButton" type="Button" parent="VBoxContainer"]
margin_top = 129.0
margin_right = 312.0
margin_bottom = 189.0
rect_pivot_offset = Vector2( 30, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 11.46
custom_colors/font_color_disabled = Color( 0.592157, 0.352941, 0.109804, 1 )
custom_colors/font_color_focus = Color( 0.592157, 0.352941, 0.109804, 1 )
custom_colors/font_color = Color( 0.411765, 0.243137, 0.0705882, 1 )
custom_colors/font_color_hover = Color( 0.592157, 0.352941, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.592157, 0.352941, 0.109804, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "Cr√©ditos"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 193.0
margin_right = 312.0
margin_bottom = 254.0
rect_pivot_offset = Vector2( 30, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 11.46
custom_colors/font_color_disabled = Color( 0.592157, 0.352941, 0.109804, 1 )
custom_colors/font_color_focus = Color( 0.592157, 0.352941, 0.109804, 1 )
custom_colors/font_color = Color( 0.411765, 0.243137, 0.0705882, 1 )
custom_colors/font_color_hover = Color( 0.592157, 0.352941, 0.109804, 1 )
custom_colors/font_color_pressed = Color( 0.592157, 0.352941, 0.109804, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "Sair"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelsButton" to="." method="_on_LevelsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditButton" to="." method="_on_CreditButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
